--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "laravel/framework": "^11.9",
         "laravel/tinker": "^2.9",
         "nwidart/laravel-modules": "^11.1",
+        "spatie/laravel-permission": "^6.10",
         "tymon/jwt-auth": "^2.1"
     },
     "require-dev": {
